--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             <div class="intro_text">
               <h2>Participe do melhor evento sobre leitura dinâmica!</h2>
               <p>
-                Serão 4 lives onde você vou ensinar o que levei uma decáda para
+                Serão 4 lives onde vou ensinar o que levei uma decáda para
                 aprender. Ler mais e melhor mesmo com pouco tempo na rotina. Só
-                vai custar o seu tempo e energia para passar um pouco mais de
+                vai custar o seu tempo para passar um pouco mais de
                 uma hora comigo durante os dias 24, 25, 26 e 27 às 20h.
               </p>
             </div>
@@ -116,12 +116,12 @@
           <div class="criador">
             <h4>Idealizador:</h4>
             <div class="criador-bloco">
-              <img src="./img/homem02.png" alt="" srcset="" />
+              <img src="./img/homem02.png" />
               <p>
                 <b>Almir Oliveira</b> é cofundador da
-                <i>Livraria Casagrande.</i> Desde de criança sempre adorou ler e
-                com o tempo desenvolveu seu próprio método de ler, estudar e
-                retirar o melhor que tem em um livro. Seu objetivo é impactar e
+                <i>Livraria Casagrande.</i> Desde criança sempre adorou ler e
+                com o tempo desenvolveu seu próprio método de estudar e
+                retirar o melhor que tem de um livro. Hoje, seu objetivo é impactar e
                 trazer cada vez mais pessoas para o mundo dos livros.
               </p>
             </div>
